# routes/admin.php
@@ -12,6 +12,7 @@
 */
 
 use App\Http\Controllers\Api\App\Coin\CoinController;
+use App\Http\Controllers\Api\App\Company\AccountBalance\AdminBalanceController;
 use App\Http\Controllers\Api\App\Company\CompanyController;
 use Illuminate\Support\Facades\Route;
 
@@ -29,5 +30,6 @@ use Illuminate\Support\Facades\Route;
      Route::delete('{company}/users/{user}', [CompanyController::class, 'removeUser'])->name('remove.user');
      Route::post('{company_id}/set/coin', [CoinController::class, 'updateValue'])->name('update.coin');
      Route::get('{company_id}/coin/system', [CoinController::class, 'getValueOfSystem'])->name('value.coin');
+     Route::get('{company_id}/users/transactions', [AdminBalanceController::class, 'getTransactionUsers'])->name('transaction');
 });
 
